--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.mjs"
+    "build": "cd web && npm install && npm run build",
+    "start": "nodemon index.js"
+
   },
   "author": "",
   "license": "ISC",
